Thu Apr  7 10:06:28 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/apps/freebcp.c src/dblib/bcp.c:
	- bcp path from Bill Thompson: support FIRE_TRIGGERS hint, fix -h
	  in freebcp app

Sat Apr  2 07:18:16 EDT 2011	JK Lowden <jklowden@freetds.org>
	* src/dblib/dblib.c src/tds/config.c src/tds/login.c
	- Support DBSETLDBNAME (really, this time)

Sat Apr  2 07:12:57 EDT 2011	JK Lowden <jklowden@freetds.org>
	* doc/userguide.sgml fixed indentation of sample code. 

Fri Apr  1 13:44:39 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/dblib.c: avoid string format problem

Wed Mar 30 14:53:04 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* configure.ac: future developing version!

Wed Mar 30 13:29:15 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/odbc/odbc.c src/tds/query.c:
	- avoid unnecessary prepare and unprepare

Sun Mar 27 12:34:23 EDT 2011	JK Lowden <jklowden@freetds.org>
	* include/sybdb.h include/tds.h
	* src/dblib/dblib.c src/tds/config.c src/tds/login.c
	- Support DBSETLDBNAME from Ken Collins cf. ML 27 Mar 2011

Tue Mar 22 13:51:32 EDT 2011	JK Lowden <jklowden@freetds.org>
	* autogen.sh neater output
	* src/apps/tsql.c spell Kerberos correctly
	* src/dblib/bcp.c initialize bcp_terminator

Mon Mar 21 20:21:51 EDT 2011	JK Lowden <jklowden@freetds.org>
	* doc/userguide.sgml updated for upcoming release

Sun Mar 13 14:40:55 EDT 2011	JK Lowden <jklowden@freetds.org>
	* doc/bsqldb.txt doc/freebcp.txt doc/tsql.txt
	- doc/userguide.sgml
	- updated for upcoming release
	* src/apps/bsqldb.c support numeric/decimal
	* src/apps/freebcp.c allow no username for trusted logins

Sat Mar 12 07:52:15 EST 2011	JK Lowden <jklowden@freetds.org>
	* doc/userguide.sgml fine tune linker appendix
	
Thu Feb 17 16:40:58 EST 2011	JK Lowden <jklowden@freetds.org>
	* Nmakefile more help for building under Windows

Thu Feb 17 10:51:40 EST 2011	JK Lowden <jklowden@freetds.org>
	* Nmakefile default to Win32-Debug